src/compserver/abstraction/parser/TRALParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 TRAL.g 2010-07-29 14:57:53

package compserver.abstraction.parser;

import compserver.abstraction.types.spectypes.*;
import compserver.abstraction.types.impltypes.*;
import compserver.abstraction.*;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class TRALParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Text", "NEWLINE", "NATURAL", "INTEGER", "Range", "WS", "'@RULES'", "':'", "','", "'==>'", "'COMPOSITION'", "'@SET'", "'AS'", "'dom'", "'ran'", "'cardinal'", "'DECOMPOSITION'", "'@CAPTURECODE'", "'BASICTYPE'", "'['", "']'", "'FREETYPE'", "'PFUN'", "'FUN'", "'REL'", "'PROD'", "'SEQUENCE'", "'POWER'", "'INT'", "'NAT'", "'PLTYPE'", "'POINTER'", "'STRUCTURE'", "'ARRAY'", "'LIST'", "'SLL'", "'DLL'", "'CLL'", "'DCLL'", "'FILE'", "'ENDOFLINE'", "'ENDOFFILE'", "'LINEAR'", "'RPL'", "'FPL'", "'DB'", "'ENUMERATION'", "'\\\"'", "'-->'", "'SCREEN'", "'plane'", "'table'", "'COLRANGE'", "'ROWRANGE'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__51=51;
    public static final int T__16=16;
    public static final int T__52=52;
    public static final int T__15=15;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int T__50=50;
    public static final int INTEGER=7;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__30=30;
    public static final int Range=8;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=9;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEWLINE=5;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int Text=4;
    public static final int NATURAL=6;

    // delegates
    // delegators


        public TRALParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TRALParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TRALParser.tokenNames; }
    public String getGrammarFileName() { return "TRAL.g"; }


    	List<ImplNodeField> fields;
    	List<ImplNodeField> fieldsList;
    	List<AbstractionRule> rulesList;
    	List<SpecNode> specNodes;
    	List<ImplNode> implNodes;
    	String code;
    	String linkPrevNode;
    	String lastPosPointedID;
    	List<ImplNodeDBColumn> columnsList;
    	List<SpecNode> cartesianMembers;
    	Map<String,String> enumElements;
    	List<VarComposition> compositions;
    	ImplNodeEnumeration nodeEnumeration;



    // $ANTLR start "abstractionLaw"
    // TRAL.g:32:1: abstractionLaw returns [AbstractionLaw law] : Text NEWLINE rules ;
    public final AbstractionLaw abstractionLaw() throws RecognitionException {
        AbstractionLaw law = null;

        Token Text1=null;
        List<AbstractionRule> rules2 = null;


        try {
            // TRAL.g:33:1: ( Text NEWLINE rules )
            // TRAL.g:33:3: Text NEWLINE rules
            {
            Text1=(Token)match(input,Text,FOLLOW_Text_in_abstractionLaw36); 
            match(input,NEWLINE,FOLLOW_NEWLINE_in_abstractionLaw38); 
            pushFollow(FOLLOW_rules_in_abstractionLaw43);
            rules2=rules();

            state._fsp--;

            law =new AbstractionLaw((Text1!=null?Text1.getText():null),rules2);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return law;
    }
    // $ANTLR end "abstractionLaw"


    // $ANTLR start "rules"
    // TRAL.g:36:1: rules returns [List<AbstractionRule> listRules] : '@RULES' NEWLINE ( rule NEWLINE )+ ;
    public final List<AbstractionRule> rules() throws RecognitionException {
        List<AbstractionRule> listRules = null;

        AbstractionRule rule3 = null;



        	rulesList = new ArrayList<AbstractionRule>();

        try {
            // TRAL.g:40:1: ( '@RULES' NEWLINE ( rule NEWLINE )+ )
            // TRAL.g:40:3: '@RULES' NEWLINE ( rule NEWLINE )+
            {
            match(input,10,FOLLOW_10_in_rules60); 
            match(input,NEWLINE,FOLLOW_NEWLINE_in_rules62); 
            // TRAL.g:41:4: ( rule NEWLINE )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Text) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // TRAL.g:41:5: rule NEWLINE
            	    {
            	    pushFollow(FOLLOW_rule_in_rules68);
            	    rule3=rule();

            	    state._fsp--;

            	    rulesList.add(rule3);
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_rules72); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            listRules = rulesList;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return listRules;
    }
    // $ANTLR end "rules"


    // $ANTLR start "rule"
    // TRAL.g:43:1: rule returns [AbstractionRule ruleObject] : Text ':' ruleAbstraction ;
    public final AbstractionRule rule() throws RecognitionException {
        AbstractionRule ruleObject = null;

        Token Text5=null;
        AbstractionRule ruleAbstraction4 = null;


        try {
            // TRAL.g:44:1: ( Text ':' ruleAbstraction )
            // TRAL.g:44:3: Text ':' ruleAbstraction
            {
            Text5=(Token)match(input,Text,FOLLOW_Text_in_rule88); 
            match(input,11,FOLLOW_11_in_rule90); 
            pushFollow(FOLLOW_ruleAbstraction_in_rule92);
            ruleAbstraction4=ruleAbstraction();

            state._fsp--;

            ruleObject = ruleAbstraction4; ruleObject.setRuleName((Text5!=null?Text5.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ruleObject;
    }
    // $ANTLR end "rule"


    // $ANTLR start "ruleAbstraction"
    // TRAL.g:46:1: ruleAbstraction returns [AbstractionRule ruleObject] : impId1= Text ':' impT1= implType ( ',' impId2= Text ':' impT2= implType )* '==>' specId1= Text ':' specT1= specType ( ',' specId2= Text ':' specT2= specType )* ( ',' NEWLINE composition )* ( ',' NEWLINE decomposition )* ( ',' NEWLINE captureCode )* ;
    public final AbstractionRule ruleAbstraction() throws RecognitionException {
        AbstractionRule ruleObject = null;

        Token impId1=null;
        Token impId2=null;
        Token specId1=null;
        Token specId2=null;
        ImplNode impT1 = null;

        ImplNode impT2 = null;

        SpecNode specT1 = null;

        SpecNode specT2 = null;

        List<VarComposition> composition6 = null;

        String captureCode7 = null;



        	specNodes = new ArrayList<SpecNode>();
        	implNodes = new ArrayList<ImplNode>();
        	compositions = new ArrayList<VarComposition>();
        	code = "";

        try {
            // TRAL.g:53:1: (impId1= Text ':' impT1= implType ( ',' impId2= Text ':' impT2= implType )* '==>' specId1= Text ':' specT1= specType ( ',' specId2= Text ':' specT2= specType )* ( ',' NEWLINE composition )* ( ',' NEWLINE decomposition )* ( ',' NEWLINE captureCode )* )
            // TRAL.g:53:3: impId1= Text ':' impT1= implType ( ',' impId2= Text ':' impT2= implType )* '==>' specId1= Text ':' specT1= specType ( ',' specId2= Text ':' specT2= specType )* ( ',' NEWLINE composition )* ( ',' NEWLINE decomposition )* ( ',' NEWLINE captureCode )*
            {
            impId1=(Token)match(input,Text,FOLLOW_Text_in_ruleAbstraction113); 
            match(input,11,FOLLOW_11_in_ruleAbstraction114); 
            pushFollow(FOLLOW_implType_in_ruleAbstraction119);
            impT1=implType();

            state._fsp--;

            ImplNode impNode1 = impT1; impNode1.setImplID((impId1!=null?impId1.getText():null)); implNodes.add(impNode1); 
            // TRAL.g:53:134: ( ',' impId2= Text ':' impT2= implType )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==12) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // TRAL.g:53:135: ',' impId2= Text ':' impT2= implType
            	    {
            	    match(input,12,FOLLOW_12_in_ruleAbstraction123); 
            	    impId2=(Token)match(input,Text,FOLLOW_Text_in_ruleAbstraction129); 
            	    match(input,11,FOLLOW_11_in_ruleAbstraction130); 
            	    pushFollow(FOLLOW_implType_in_ruleAbstraction135);
            	    impT2=implType();

            	    state._fsp--;

            	    ImplNode impNode2 = impT2; impNode2.setImplID((impId2!=null?impId2.getText():null)); implNodes.add(impNode2); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,13,FOLLOW_13_in_ruleAbstraction141); 
            specId1=(Token)match(input,Text,FOLLOW_Text_in_ruleAbstraction147); 
            match(input,11,FOLLOW_11_in_ruleAbstraction148); 
            pushFollow(FOLLOW_specType_in_ruleAbstraction153);
            specT1=specType();

            state._fsp--;

            SpecNode specNode1 = specT1; specNode1.setSpecID((specId1!=null?specId1.getText():null)); specNodes.add(specNode1); 
            // TRAL.g:53:417: ( ',' specId2= Text ':' specT2= specType )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==12) ) {
                    int LA3_1 = input.LA(2);

                    if ( (LA3_1==Text) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // TRAL.g:53:418: ',' specId2= Text ':' specT2= specType
            	    {
            	    match(input,12,FOLLOW_12_in_ruleAbstraction157); 
            	    specId2=(Token)match(input,Text,FOLLOW_Text_in_ruleAbstraction163); 
            	    match(input,11,FOLLOW_11_in_ruleAbstraction164); 
            	    pushFollow(FOLLOW_specType_in_ruleAbstraction169);
            	    specT2=specType();

            	    state._fsp--;

            	    SpecNode specNode2 = specT2; specNode2.setSpecID((specId2!=null?specId2.getText():null)); specNodes.add(specNode2); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // TRAL.g:53:563: ( ',' NEWLINE composition )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==12) ) {
                    int LA4_1 = input.LA(2);

                    if ( (LA4_1==NEWLINE) ) {
                        int LA4_3 = input.LA(3);

                        if ( (LA4_3==14) ) {
                            alt4=1;
                        }


                    }


                }


                switch (alt4) {
            	case 1 :
            	    // TRAL.g:53:564: ',' NEWLINE composition
            	    {
            	    match(input,12,FOLLOW_12_in_ruleAbstraction176); 
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_ruleAbstraction178); 
            	    pushFollow(FOLLOW_composition_in_ruleAbstraction180);
            	    composition6=composition();

            	    state._fsp--;

            	    compositions = composition6;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // TRAL.g:53:637: ( ',' NEWLINE decomposition )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==12) ) {
                    int LA5_1 = input.LA(2);

                    if ( (LA5_1==NEWLINE) ) {
                        int LA5_3 = input.LA(3);

                        if ( (LA5_3==20) ) {
                            alt5=1;
                        }


                    }


                }


                switch (alt5) {
            	case 1 :
            	    // TRAL.g:53:638: ',' NEWLINE decomposition
            	    {
            	    match(input,12,FOLLOW_12_in_ruleAbstraction187); 
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_ruleAbstraction189); 
            	    pushFollow(FOLLOW_decomposition_in_ruleAbstraction191);
            	    decomposition();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // TRAL.g:53:666: ( ',' NEWLINE captureCode )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==12) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // TRAL.g:53:667: ',' NEWLINE captureCode
            	    {
            	    match(input,12,FOLLOW_12_in_ruleAbstraction196); 
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_ruleAbstraction198); 
            	    pushFollow(FOLLOW_captureCode_in_ruleAbstraction200);
            	    captureCode7=captureCode();

            	    state._fsp--;

            	    code+=captureCode7;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            ruleObject = new AbstractionRule("",implNodes,specNodes,code,compositions); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ruleObject;
    }
    // $ANTLR end "ruleAbstraction"


    // $ANTLR start "composition"
    // TRAL.g:55:1: composition returns [List<VarComposition> varCompositions] : 'COMPOSITION' ( NEWLINE '@SET' implID= Text 'AS' preOperator specID= Text )+ ;
    public final List<VarComposition> composition() throws RecognitionException {
        List<VarComposition> varCompositions = null;

        Token implID=null;
        Token specID=null;
        TRALParser.preOperator_return preOperator8 = null;



        	varCompositions = new ArrayList<VarComposition>();

        try {
            // TRAL.g:59:1: ( 'COMPOSITION' ( NEWLINE '@SET' implID= Text 'AS' preOperator specID= Text )+ )
            // TRAL.g:59:3: 'COMPOSITION' ( NEWLINE '@SET' implID= Text 'AS' preOperator specID= Text )+
            {
            match(input,14,FOLLOW_14_in_composition221); 
            // TRAL.g:60:3: ( NEWLINE '@SET' implID= Text 'AS' preOperator specID= Text )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==NEWLINE) ) {
                    int LA7_2 = input.LA(2);

                    if ( (LA7_2==15) ) {
                        alt7=1;
                    }


                }


                switch (alt7) {
            	case 1 :
            	    // TRAL.g:60:4: NEWLINE '@SET' implID= Text 'AS' preOperator specID= Text
            	    {
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_composition227); 
            	    match(input,15,FOLLOW_15_in_composition229); 
            	    implID=(Token)match(input,Text,FOLLOW_Text_in_composition235); 
            	    match(input,16,FOLLOW_16_in_composition237); 
            	    pushFollow(FOLLOW_preOperator_in_composition239);
            	    preOperator8=preOperator();

            	    state._fsp--;

            	    specID=(Token)match(input,Text,FOLLOW_Text_in_composition245); 
            	    varCompositions.add(new VarComposition((specID!=null?specID.getText():null),(preOperator8!=null?input.toString(preOperator8.start,preOperator8.stop):null),(implID!=null?implID.getText():null))); 

            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return varCompositions;
    }
    // $ANTLR end "composition"

    public static class preOperator_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "preOperator"
    // TRAL.g:62:1: preOperator : ( 'dom' | 'ran' | 'cardinal' );
    public final TRALParser.preOperator_return preOperator() throws RecognitionException {
        TRALParser.preOperator_return retval = new TRALParser.preOperator_return();
        retval.start = input.LT(1);

        try {
            // TRAL.g:63:1: ( 'dom' | 'ran' | 'cardinal' )
            // TRAL.g:
            {
            if ( (input.LA(1)>=17 && input.LA(1)<=19) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "preOperator"


    // $ANTLR start "decomposition"
    // TRAL.g:65:1: decomposition : 'DECOMPOSITION' NEWLINE ( '@SET' Text 'AS' Text NEWLINE )* ;
    public final void decomposition() throws RecognitionException {
        try {
            // TRAL.g:66:1: ( 'DECOMPOSITION' NEWLINE ( '@SET' Text 'AS' Text NEWLINE )* )
            // TRAL.g:66:3: 'DECOMPOSITION' NEWLINE ( '@SET' Text 'AS' Text NEWLINE )*
            {
            match(input,20,FOLLOW_20_in_decomposition273); 
            match(input,NEWLINE,FOLLOW_NEWLINE_in_decomposition275); 
            // TRAL.g:67:3: ( '@SET' Text 'AS' Text NEWLINE )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==15) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // TRAL.g:67:4: '@SET' Text 'AS' Text NEWLINE
            	    {
            	    match(input,15,FOLLOW_15_in_decomposition280); 
            	    match(input,Text,FOLLOW_Text_in_decomposition282); 
            	    match(input,16,FOLLOW_16_in_decomposition284); 
            	    match(input,Text,FOLLOW_Text_in_decomposition286); 
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_decomposition288); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decomposition"


    // $ANTLR start "captureCode"
    // TRAL.g:69:1: captureCode returns [String toCapture] : '@CAPTURECODE' NEWLINE Text ;
    public final String captureCode() throws RecognitionException {
        String toCapture = null;

        Token Text9=null;

        try {
            // TRAL.g:70:1: ( '@CAPTURECODE' NEWLINE Text )
            // TRAL.g:70:3: '@CAPTURECODE' NEWLINE Text
            {
            match(input,21,FOLLOW_21_in_captureCode302); 
            match(input,NEWLINE,FOLLOW_NEWLINE_in_captureCode304); 
            Text9=(Token)match(input,Text,FOLLOW_Text_in_captureCode308); 
            toCapture = (Text9!=null?Text9.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return toCapture;
    }
    // $ANTLR end "captureCode"


    // $ANTLR start "specType"
    // TRAL.g:73:1: specType returns [SpecNode specNode] : ( basicType | freeType | pFunction | tFunction | relation | sequence | powerSet | cartesianProd | integer | nat );
    public final SpecNode specType() throws RecognitionException {
        SpecNode specNode = null;

        SpecNodeBasicType basicType10 = null;

        SpecNodeFreeType freeType11 = null;

        SpecNodePFun pFunction12 = null;

        SpecNodeFun tFunction13 = null;

        SpecNodeRel relation14 = null;

        SpecNodeSeq sequence15 = null;

        SpecNodePowerSet powerSet16 = null;

        SpecNodeCartesianProd cartesianProd17 = null;

        SpecNodeInt integer18 = null;

        SpecNodeNat nat19 = null;


        try {
            // TRAL.g:74:1: ( basicType | freeType | pFunction | tFunction | relation | sequence | powerSet | cartesianProd | integer | nat )
            int alt9=10;
            switch ( input.LA(1) ) {
            case 22:
                {
                alt9=1;
                }
                break;
            case 25:
                {
                alt9=2;
                }
                break;
            case 26:
                {
                alt9=3;
                }
                break;
            case 27:
                {
                alt9=4;
                }
                break;
            case 28:
                {
                alt9=5;
                }
                break;
            case 30:
                {
                alt9=6;
                }
                break;
            case 31:
                {
                alt9=7;
                }
                break;
            case 29:
                {
                alt9=8;
                }
                break;
            case 32:
                {
                alt9=9;
                }
                break;
            case 33:
                {
                alt9=10;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // TRAL.g:74:3: basicType
                    {
                    pushFollow(FOLLOW_basicType_in_specType322);
                    basicType10=basicType();
